@@ -64,6 +64,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #1019882: Fix IndexError when loading certain hotshot stats.
+
 - Issue #9422: Fix memory leak when re-initializing a struct.Struct object.
 
 - Issue #7900: The getgroups(2) system call on MacOSX behaves rather oddly
